<resources>
    <string name="app_name">Frutiapp</string>
    <string name="txt_nombre">Como te llamas??</string>
    <string name="btn_jugar">Jugar</string>

    <string name="et_vidas">Manzanas</string>
    <string name="Jugador_nombre">Jugador:</string>
    <string name="total_score">Score:0</string>
    <string name="btn_sumar">Comprobar</string>
    <string name="et_res">Respuesta</string>


</resources>
